# IQTreeCapitator_bot

./: .env  .gitignore  docker-compose.yml  flake.nix  hello.py  migrate.py  pyproject.toml  requirements.txt
.github/workflows/: static.yaml
iq_tree_capitator/: create_bot.py  database.py  logger.py  main.py
iq_tree_capitator/admin/: __init__.py  _common.py  add_tree.py  list_trees.py
iq_tree_capitator/user/: __init__.py  get_tree.py  help.py
iq_tree_capitator/utils/: __init__.py  error.py  media.py  message.py
migrations/: 001_create_trees.sql
nix/: devshell.nix
src/: database.py  main.py
