[project]
name = 'iq_tree_capitator'
description = '...'
authors = [{ name = 'linkfrg' }]
version = "0.1.0.alpha0"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.mypy]
python_version = "3.11"
packages = ["iq_tree_capitator"]
exclude = ["venv"]
check_untyped_defs = true

[tool.ruff]
include = ["iq_tree_capitator/**/*.py"]

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
    "I001", # import block is un-sorted or un-formatted
]

fixable = ["ALL"]
unfixable = []

[project.scripts]
iq-tree-capitator = "iq_tree_capitator.main:main"
